SPM-7575 verze modulů na 9.0.0